Import projets vierges Java et Scala

--- a/README
+++ b/README
@@ -1,2 +1,6 @@
 TwitComet
-=======================================
+=========
+
+Application expérimentale utilisant Play2/Comet pour simuler un "twitter like
+
+
